--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.kichang'
-version = '2021.7.1-SNAPSHOT'
+version = '2021.7.2-RELEASE'
 sourceCompatibility = '11'
 
 repositories {
