--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'com.kichang'
-version = '2021.7.3-RELEASE'
+version = '2021.7.7-RELEASE'
 sourceCompatibility = '11'
 
 repositories {
@@ -41,8 +41,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.integration:spring-integration-syslog'
 	
-	implementation 'com.cloudbees:syslog-java-client:1.1.2'
+	implementation 'com.cloudbees:syslog-java-client:1.1.7'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
+  implementation 'com.google.code.findbugs:jsr305:3.0.2'
+	
 	
 }
 
